update challenge file

--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -64,8 +64,9 @@
     }
    ],
    "source": [
-    "# Looked for column names so that I can create a compund key to search for every single date\n",
-    "# given that there are many repeated dates a\n",
+    "# Looked for column names so that I find a primary key (or even combine for a compound key) \n",
+    "# to search for every single date given that there are many repeated dates and temperatures\n",
+    "\n",
     "columns = inspect(engine).get_columns('Measurement')\n",
     "for c in columns:\n",
     "    print(c['name'], c[\"type\"])"
