--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies\n",
     "import numpy as np\n",
-    "import datetime as dt\n",
     "import pandas as pd\n",
     "\n",
     "# Python SQL toolkit and Object Relational Mapper\n",
@@ -20,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1106,7 @@
        " ...]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,9 +1119,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Date  June Temps\n",
+      "0  2010-06-01        78.0\n",
+      "1  2010-06-01        74.0\n",
+      "2  2010-06-01        73.0\n",
+      "3  2010-06-01        77.0\n",
+      "4  2010-06-01        69.0\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1150,44 +1161,134 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2010-06-01</td>\n",
-       "      <td>78.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2010-06-01</td>\n",
-       "      <td>74.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2010-06-01</td>\n",
+       "      <th>714</th>\n",
+       "      <td>2013-06-05</td>\n",
        "      <td>73.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2010-06-01</td>\n",
+       "      <th>961</th>\n",
+       "      <td>2014-06-09</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>658</th>\n",
+       "      <td>2012-06-28</td>\n",
+       "      <td>73.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>614</th>\n",
+       "      <td>2012-06-22</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>836</th>\n",
+       "      <td>2013-06-21</td>\n",
+       "      <td>68.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1421</th>\n",
+       "      <td>2016-06-17</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1433</th>\n",
+       "      <td>2016-06-19</td>\n",
+       "      <td>79.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>365</th>\n",
+       "      <td>2011-06-17</td>\n",
+       "      <td>78.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1503</th>\n",
+       "      <td>2016-06-30</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>547</th>\n",
+       "      <td>2012-06-12</td>\n",
        "      <td>77.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2010-06-01</td>\n",
-       "      <td>69.0</td>\n",
+       "      <th>543</th>\n",
+       "      <td>2012-06-12</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1100</th>\n",
+       "      <td>2014-06-29</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1683</th>\n",
+       "      <td>2017-06-28</td>\n",
+       "      <td>79.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>845</th>\n",
+       "      <td>2013-06-23</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>611</th>\n",
+       "      <td>2012-06-21</td>\n",
+       "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>920</th>\n",
+       "      <td>2014-06-04</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1185</th>\n",
+       "      <td>2015-06-12</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1424</th>\n",
+       "      <td>2016-06-18</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>443</th>\n",
+       "      <td>2011-06-27</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>2010-06-05</td>\n",
+       "      <td>72.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Date  June Temps\n",
-       "0  2010-06-01        78.0\n",
-       "1  2010-06-01        74.0\n",
-       "2  2010-06-01        73.0\n",
-       "3  2010-06-01        77.0\n",
-       "4  2010-06-01        69.0"
+       "            Date  June Temps\n",
+       "714   2013-06-05        73.0\n",
+       "961   2014-06-09        72.0\n",
+       "658   2012-06-28        73.0\n",
+       "614   2012-06-22        75.0\n",
+       "836   2013-06-21        68.0\n",
+       "1421  2016-06-17        76.0\n",
+       "1433  2016-06-19        79.0\n",
+       "365   2011-06-17        78.0\n",
+       "1503  2016-06-30        80.0\n",
+       "547   2012-06-12        77.0\n",
+       "543   2012-06-12        72.0\n",
+       "1100  2014-06-29        72.0\n",
+       "1683  2017-06-28        79.0\n",
+       "845   2013-06-23        74.0\n",
+       "611   2012-06-21        71.0\n",
+       "920   2014-06-04        75.0\n",
+       "1185  2015-06-12        77.0\n",
+       "1424  2016-06-18        77.0\n",
+       "443   2011-06-27        76.0\n",
+       "38    2010-06-05        72.0"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,12 +1298,13 @@
     "\n",
     "june_temps_df = pd.DataFrame(june_temps, columns=['Date', 'June Temps'])\n",
     "\n",
-    "june_temps_df.head()"
+    "print(june_temps_df.head(5))\n",
+    "june_temps_df.sample(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1380,7 @@
        "max      85.000000"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1297,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2320,7 +2422,7 @@
        " ...]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2333,9 +2435,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Date  December Temps\n",
+      "0  2010-12-01            76.0\n",
+      "1  2010-12-01            73.0\n",
+      "2  2010-12-01            73.0\n",
+      "3  2010-12-01            72.0\n",
+      "4  2010-12-01            78.0\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -2363,19 +2477,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2010-12-01</td>\n",
-       "      <td>76.0</td>\n",
+       "      <th>792</th>\n",
+       "      <td>2013-12-16</td>\n",
+       "      <td>65.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2010-12-01</td>\n",
-       "      <td>73.0</td>\n",
+       "      <th>1284</th>\n",
+       "      <td>2015-12-26</td>\n",
+       "      <td>74.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2010-12-01</td>\n",
-       "      <td>73.0</td>\n",
+       "      <th>1098</th>\n",
+       "      <td>2014-12-26</td>\n",
+       "      <td>63.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1341</th>\n",
+       "      <td>2016-12-04</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1325</th>\n",
+       "      <td>2016-12-02</td>\n",
+       "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>2011-12-21</td>\n",
+       "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>583</th>\n",
+       "      <td>2012-12-18</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1310</th>\n",
+       "      <td>2015-12-30</td>\n",
+       "      <td>74.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2383,24 +2522,89 @@
        "      <td>72.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2010-12-01</td>\n",
-       "      <td>78.0</td>\n",
+       "      <th>1412</th>\n",
+       "      <td>2016-12-15</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1402</th>\n",
+       "      <td>2016-12-14</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>959</th>\n",
+       "      <td>2014-12-07</td>\n",
+       "      <td>67.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>290</th>\n",
+       "      <td>2011-12-08</td>\n",
+       "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>709</th>\n",
+       "      <td>2013-12-05</td>\n",
+       "      <td>67.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>956</th>\n",
+       "      <td>2014-12-06</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1467</th>\n",
+       "      <td>2016-12-23</td>\n",
+       "      <td>69.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>812</th>\n",
+       "      <td>2013-12-18</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695</th>\n",
+       "      <td>2013-12-03</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>340</th>\n",
+       "      <td>2011-12-14</td>\n",
+       "      <td>68.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1266</th>\n",
+       "      <td>2015-12-23</td>\n",
+       "      <td>73.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Date  December Temps\n",
-       "0  2010-12-01            76.0\n",
-       "1  2010-12-01            73.0\n",
-       "2  2010-12-01            73.0\n",
-       "3  2010-12-01            72.0\n",
-       "4  2010-12-01            78.0"
+       "            Date  December Temps\n",
+       "792   2013-12-16            65.0\n",
+       "1284  2015-12-26            74.0\n",
+       "1098  2014-12-26            63.0\n",
+       "1341  2016-12-04            70.0\n",
+       "1325  2016-12-02            71.0\n",
+       "384   2011-12-21            71.0\n",
+       "583   2012-12-18            74.0\n",
+       "1310  2015-12-30            74.0\n",
+       "3     2010-12-01            72.0\n",
+       "1412  2016-12-15            74.0\n",
+       "1402  2016-12-14            70.0\n",
+       "959   2014-12-07            67.0\n",
+       "290   2011-12-08            71.0\n",
+       "709   2013-12-05            67.0\n",
+       "956   2014-12-06            70.0\n",
+       "1467  2016-12-23            69.0\n",
+       "812   2013-12-18            72.0\n",
+       "695   2013-12-03            70.0\n",
+       "340   2011-12-14            68.0\n",
+       "1266  2015-12-23            73.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2410,7 +2614,8 @@
     "\n",
     "december_temps_df = pd.DataFrame(december_temps, columns=['Date', 'December Temps'])\n",
     "\n",
-    "december_temps_df.head()"
+    "print(december_temps_df.head(5))\n",
+    "december_temps_df.sample(20)"
    ]
   },
   {
